--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "start:dev": "NODE_ENV=dev nodemon ./bin/www",
-    "start:production": "NODE_ENV=production nodemon ./bin/www"
+    "start:production": "NODE_ENV=production nodemon ./bin/www",
+    "swagger": "node ./swagger.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -14,6 +15,8 @@
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "mongoose": "^6.3.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "swagger-autogen": "^2.5.10",
+    "swagger-ui-express": "^4.4.0"
   }
 }
