--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "morgan": "~1.9.1",
     "swagger-autogen": "^2.5.10",
     "swagger-ui-express": "^4.4.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
